feat: implement preference filtering functionality
- Add filter controls to search section with ❤️ Liked and 🚫 Hide Disliked buttons

- Extend SearchEngine applyFilters() to support preference filtering with AND logic

- Implement filter state management and UI updates

- Show/hide filter controls based on user preferences

- Display dynamic preference counts in filter buttons

- Add comprehensive CSS styling with 44px touch targets

Related to Task 4.0 in menu preferences PRD

--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
                     <!-- Dynamic suggestions will be populated here -->
                 </div>
             </div>
+            
+            <!-- Preference Filters -->
+            <div id="preference-filters" class="preference-filters hidden">
+                <button id="show-liked-filter" class="filter-btn" data-filter="showOnlyLiked" aria-label="Show only liked items">
+                    <span class="filter-icon">❤️</span>
+                    <span class="filter-label">Liked</span>
+                    <span class="filter-count">(0)</span>
+                </button>
+                <button id="hide-disliked-filter" class="filter-btn" data-filter="hideDislikes" aria-label="Hide disliked items">
+                    <span class="filter-icon">🚫</span>
+                    <span class="filter-label">Hide Disliked</span>
+                </button>
+            </div>
         </section>
 
         <!-- Results Section -->
